# but3-compositing

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE.md  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/: application.hxx
include/image/: image.hxx  ppm.hxx
include/ui/: listing.hxx  menu.hxx  settings.hxx  viewer.hxx  window.hxx
include/utils/: builder.hxx  loader.hxx
samples/: lena_v2.ppm  spheres.ppm  spheres_v2.ppm
samples/spheres/: composed.ppm  left.ppm  middle.ppm  right.ppm
source/: application.cxx  lib.cxx  main.cxx
source/image/: ppm.cxx
source/ui/: listing.cxx  menu.cxx  settings.cxx  viewer.cxx  window.cxx
source/utils/: builder.cxx  loader.cxx
test/: CMakeLists.txt
test/source/: builder.test.cxx  compositing_test.cxx  loader.test.cxx  ppm.test.cxx
